--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,4 +8,6 @@
 # Copyright (C) 2012 STFC
 # 
 # Licence: BSD - See LICENCE file for details
-recursive-include ndg/ *.crt *.key *.pem README
+recursive-include ndg/httpsclient/test *.crt *.key *.pem *.sh README
+recursive-include documentation Makefile
+recursive-include README
