Fix manifest include setting.
git-svn-id: http://proj.badc.rl.ac.uk/svn/ndg-security/trunk/ndg_httpsclient@7992 051b1e3e-aa0c-0410-b6c2-bfbade6052be

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,6 +8,6 @@
 # Copyright (C) 2012 STFC
 # 
 # Licence: BSD - See LICENCE file for details
-recursive-include ndg/httpsclient/test *.crt *.key *.pem *.sh README
+recursive-include ndg/httpsclient/test *.crt *.key *.sh README
 recursive-include documentation Makefile
-recursive-include README
+include README
